Updated Chapter 1 and Chapter 2

--- a/ROS2_Chapter_2.ipynb
+++ b/ROS2_Chapter_2.ipynb
@@ -147,7 +147,7 @@
    "source": [
     "### 2.2.1 Exmaple of Topic Communication with Default Message Interface\n",
     "\n",
-    "<img src=\"Examples/excution_demo.gif\" alt=\"Execution Demo\" width=\"300\" autoplay>\n",
+    "<img src=\"figs/excution_demo.gif\" alt=\"Execution Demo\" width=\"300\" autoplay>\n",
     "\n",
     "\n",
     "### Explaination of the Example\n",
@@ -343,7 +343,7 @@
    "source": [
     "### 2.2.2 Example of Topic Communication with Custom Message Interface\n",
     "\n",
-    "<img src=\"Examples/2_2_2_2_Customer_Interface_Topic_example.gif\" alt=\"Execution Demo\" width=\"320\" autoplay>\n",
+    "<img src=\"figs/2_2_2_2_Customer_Interface_Topic_example.gif\" alt=\"Execution Demo\" width=\"320\" autoplay>\n",
     "\n",
     "### Explaination of the Example ###\n",
     "\n",
@@ -368,7 +368,7 @@
     "\n",
     "3. Compile\n",
     "```bash\n",
-    "colcone build --packages-select base_interfaces_demo\n",
+    "colcon build --packages-select base_interfaces_demo\n",
     "```\n",
     "\n",
     "4. Test the custom message interface\n",
