Updated Chapter 1 and Chapter 2

--- a/ROS2_Chapter_2.ipynb
+++ b/ROS2_Chapter_2.ipynb
@@ -531,7 +531,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
+    "### Exercise ###\n",
+    "Create a node that publishes your wsuid, numerical value of your last three digits of your wsuid, and the division results of the last three digits of your wsuid divided by first three digits of your wsuid. The subscriber node will receive the message and print it out. \n",
     "\n"
    ]
   },
@@ -626,6 +627,113 @@
     "    <img src = \"figs/service_communication_srv_result.png\" alt=\"Service Communication Demo\">\n",
     "</div>\n",
     "\n",
+    "5. Edit python files under the py02_service folder \n",
+    "\n",
+    "Define the server node\n",
+    "\n",
+    "```python\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
+    " requirement: create a server\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "# import nessesary modules\n",
+    "import rclpy\n",
+    "from rclpy.node import Node\n",
+    "from base_interfaces_demo.srv import AddInts    \n",
+    "\n",
+    "\n",
+    "class MinimalService(Node):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__('minimal_service')\n",
+    "        # create a server\n",
+    "        self.srv = self.create_service(AddInts, 'add_two_ints', self.add_two_ints_callback)\n",
+    "        self.get_logger().info('Server is ready to receive request...')\n",
+    "\n",
+    "    def add_two_ints_callback(self, request, response):\n",
+    "        response.sum = request.num1 + request.num2\n",
+    "        self.get_logger().info('Incoming request\\na: %d b: %d' % (request.num1, request.num2))\n",
+    "        return response\n",
+    "    \n",
+    "\n",
+    "def main():\n",
+    "    # initialization \n",
+    "    rclpy.init()\n",
+    "    # use the spin function \n",
+    "    minimal_service = MinimalService()\n",
+    "    rclpy.spin(minimal_service)\n",
+    "    # shutdown the node\n",
+    "    rclpy.shutdown()\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "    \n",
+    "    \n",
+    "``` \n",
+    "\n",
+    "Define the client node\n",
+    "\n",
+    "```python\n",
+    "\n",
+    "\"\"\"\n",
+    "    requirements: edit the client, send two ints to the server, receive the sum of the two ints\n",
+    "\"\"\"\n",
+    "\n",
+    "# import necessary packages\n",
+    "import sys\n",
+    "import rclpy\n",
+    "from rclpy.node import Node\n",
+    "from base_interfaces_demo.srv import AddInts\n",
+    "\n",
+    "\n",
+    "class MinimalClient(Node):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__('minimal_client_py')\n",
+    "        # create client\n",
+    "        self.cli = self.create_client(AddInts, 'add_ints')\n",
+    "        # wait for the service to be available\n",
+    "        while not self.cli.wait_for_service(timeout_sec=1.0):\n",
+    "            self.get_logger().info('service not available, waiting again...')\n",
+    "        self.req = AddInts.Request()\n",
+    "        \n",
+    "    def send_request(self):\n",
+    "        # set request data\n",
+    "        self.req.num1 = int(sys.argv[1])\n",
+    "        self.req.num2 = int(sys.argv[2])\n",
+    "        # send request\n",
+    "        self.future = self.cli.call_async(self.req)\n",
+    "        \n",
+    "def main(args=None):\n",
+    "    # init rclpy\n",
+    "    rclpy.init(args=args)\n",
+    "    # create node\n",
+    "    minimal_client = MinimalClient()\n",
+    "    # send request\n",
+    "    minimal_client.send_request()\n",
+    "    # spin\n",
+    "    rclpy.spin_until_future_complete(minimal_client, minimal_client.future)\n",
+    "    try: \n",
+    "        response = minimal_client.future.result()\n",
+    "    except Exception as e:\n",
+    "        minimal_client.get_logger().info(\n",
+    "            'Service call failed %r' % (e,))\n",
+    "    else:\n",
+    "        minimal_client.get_logger().info(\n",
+    "            'Result of add_two_ints: for %d + %d = %d' %\n",
+    "            (minimal_client.req.num1, minimal_client.req.num2, response.sum))\n",
+    "        \n",
+    "    # release resources\n",
+    "    rclpy.shutdown()\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "```\n",
+    "\n",
+    "\n",
     "\n",
     "### Workflow of the Example ###\n",
     "\n",
@@ -641,6 +749,260 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 Action Communication\n",
+    "\n",
+    "**Scenario**\n",
+    "\n",
+    "Regarding action communication, let's start by introducing it through the use case of navigation described below:\n",
+    "\n",
+    "*A robot navigates to a specific target point. This process requires Node A to publish the target information, then Node B receives the request and controls the movement, ultimately responding with the target achievement status.*\n",
+    "\n",
+    "At first glance, this seems like a task for service communication, as the requirement involves Node A sending the target, Node B executing it, and then returning a result. This is a typical request-response interaction model. However, using basic service communication alone presents a problem: navigation is a process, a time-consuming operation. If we use service communication, only at the end of the navigation would we get a response. During navigation, Node A would receive no feedback, potentially causing a \"pseudo-freeze\" in the program. This lack of control during the process can result in a poor user experience and logical flaws (such as being unable to handle navigation cancellation requests).\n",
+    "\n",
+    "A more suitable solution would be to continuously provide feedback on the robot's current state throughout the navigation process, and only return the final result when navigation completes. In ROS, this implementation strategy is known as action communication.\n",
+    "\n",
+    "**Concepts**\n",
+    "\n",
+    "Action communication is suitable for long-running tasks. Structurally, action communication consists of three components: a goal, feedback, and a result. Functionally, it is similar to service communication, where the action client can send a request to the action server and receive the server's final response. However, action communication allows continuous feedback during the request-response process and enables the client to send a task cancellation request to the action server.\n",
+    "\n",
+    "At the implementation level, action communication is built on top of topic and service communication. The goal transmission is a wrapper around service communication, as is the result retrieval, while continuous feedback is a wrapper around topic communication.\n",
+    " \n",
+    "<div style = \"text-align:center;\">\n",
+    "    <img src = \"figs/2_4_Action_Communicaiton_model_1.gif\" alt=\"Service Communication Demo\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Purpose**\n",
+    "\n",
+    "Normally, action communication is used in scenarios where a long-running task requires continuous feedback and the ability to cancel the task.\n",
+    "\n",
+    "### Example of Action Communication ###\n",
+    "\n",
+    "<div style = \"text-align:center;\">\n",
+    "    <img src = \"figs/chapter_2_demo_service_action_1_create_action_node_2.gif\" alt=\"Service Communication Demo\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "### Explaination of the Example ###\n",
+    "\n",
+    "In this example, we will create two nodes: an action server node and an action client node. \n",
+    "\n",
+    "\n",
+    "\n",
+    "1. Create the package named ```base py03_action``` under the ```bash src``` folder\n",
+    "2. Create the action interface file\n",
+    "   1. Create .action file\n",
+    "        - Under package ```bash base_interfaces_demo```, create a new folder named ```action```, and create a new file named ```Progress.action```\n",
+    "        - ```bash \n",
+    "            int64 num\n",
+    "            ---\n",
+    "            int64 sum\n",
+    "            ---\n",
+    "            float64 progress\n",
+    "            ```\n",
+    "\n",
+    "        - Edit the package.xml file\n",
+    "          <buildtool_depend>rosidl_default_generators</buildtool_depend>\n",
+    "          <depend>action_msgs</depend>\n",
+    "          <member_of_group>rosidl_interface_packages</member_of_group>\n",
+    "\n",
+    "        - Edit the CMakeLists.txt file\n",
+    "          ```bash\n",
+    "          rosidl_generate_interfaces(${PROJECT_NAME}\n",
+    "             \"msg/Student.msg\"\n",
+    "             \"srv/AddInts.srv\"\n",
+    "             \"action/Progress.action\"\n",
+    "            )  \n",
+    "\n",
+    "         - colcon build --packages-select base_interfaces_demo\n",
+    "       - Test the custom action interface\n",
+    "         ```bash\n",
+    "         . install/setup.bash\n",
+    "         ros2 interface show base_interfaces_demo/action/Progress\n",
+    "         ```   \n",
+    "   2. Edit the package.xml, and setup.py file\n",
+    "   3. Compile\n",
+    "   4. Run\n",
+    "\n",
+    "3. Edit python files under the py03_service folder \n",
+    "\n",
+    "Define the server node\n",
+    "\n",
+    "```python\n",
+    "\"\"\"\n",
+    "requirement: Edit Action Server\n",
+    "\"\"\"\n",
+    "\n",
+    "# import nessary libraries\n",
+    "import rclpy\n",
+    "import time\n",
+    "from rclpy.action import ActionServer\n",
+    "from rclpy.node import Node\n",
+    "from base_interfaces_demo.action import Progress\n",
+    "\n",
+    "\n",
+    "\n",
+    "# create a node\n",
+    "class ProgressActionServer(Node):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__('progress_action_server')\n",
+    "        # create an action server\n",
+    "        self._action_server = ActionServer(\n",
+    "            self,\n",
+    "            Progress,\n",
+    "            'get_sum',\n",
+    "            self.execute_callback)\n",
+    "        self.get_logger().info('Action server is ready to receive requests...')\n",
+    "        \n",
+    "    def execute_callback(self, goal_handle):\n",
+    "        self.get_logger().info('Executing goal...')\n",
+    "        \n",
+    "        feedback_msg = Progress.Feedback()\n",
+    "        \n",
+    "        sum = 0 \n",
+    "        for i in range(1, goal_handle.request.num + 1):\n",
+    "            sum += i\n",
+    "            feedback_msg.progress = i / goal_handle.request.num\n",
+    "            self.get_logger().info('Contineous Feedback: %.2f' % feedback_msg.progress)\n",
+    "            goal_handle.publish_feedback(feedback_msg)\n",
+    "            time.sleep(1)\n",
+    "\n",
+    "        goal_handle.succeed()\n",
+    "        result = Progress.Result()\n",
+    "        result.sum = sum\n",
+    "        self.get_logger().info('Done')\n",
+    "        \n",
+    "        return result\n",
+    "    \n",
+    "def main(args=None):\n",
+    "    # init rclpy\n",
+    "    rclpy.init(args=args)\n",
+    "    # create node\n",
+    "    Progress_action_server = ProgressActionServer()\n",
+    "    # spin\n",
+    "    rclpy.spin(Progress_action_server)\n",
+    "    # shutdown\n",
+    "    rclpy.shutdown()\n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "    \n",
+    "``` \n",
+    "\n",
+    "Define the client node\n",
+    "\n",
+    "```python\n",
+    "\"\"\"\n",
+    "\n",
+    "    requirement: create an action client.\n",
+    "\"\"\"\n",
+    "\n",
+    "# import necessary packages\n",
+    "import rclpy\n",
+    "from rclpy.action import ActionClient\n",
+    "from rclpy.node import Node\n",
+    "from base_interfaces_demo.action import Progress\n",
+    "\n",
+    "\n",
+    "# create a node\n",
+    "class ProgressActionClient(Node):\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        super().__init__('progress_action_client')\n",
+    "        # create an action client\n",
+    "        self._action_client = ActionClient(\n",
+    "            self,\n",
+    "            Progress,\n",
+    "            'get_sum')\n",
+    "    \n",
+    "    def send_goal(self, num):\n",
+    "        # send request\n",
+    "        goal_msg = Progress.Goal()\n",
+    "        goal_msg.num = num\n",
+    "        self._action_client.wait_for_server()\n",
+    "        self._send_goal_future = self._action_client.send_goal_async(goal_msg,\n",
+    "                                                                     feedback_callback=self.feedback_callback)\n",
+    "        \n",
+    "        self._send_goal_future.add_done_callback(self.goal_response_callback)\n",
+    "        \n",
+    "    def goal_response_callback(self, future):\n",
+    "        # handle goal response\n",
+    "        goal_handle = future.result()\n",
+    "        if not goal_handle.accepted:\n",
+    "            self.get_logger().info('Goal rejected...')\n",
+    "            return\n",
+    "        self.get_logger().info('Goal accepted...')\n",
+    "        \n",
+    "        self._get_result_future = goal_handle.get_result_async()\n",
+    "        self._get_result_future.add_done_callback(self.get_result_callback)\n",
+    "        \n",
+    "    def get_result_callback(self, future):\n",
+    "        # handle result\n",
+    "        result = future.result().result\n",
+    "        self.get_logger().info('Result: %d' % result.sum)\n",
+    "        rclpy.shutdown()\n",
+    "    \n",
+    "    def feedback_callback(self, feedback_msg):\n",
+    "        # handle feedback\n",
+    "        feedback = (int)(feedback_msg.feedback.progress * 100)\n",
+    "        self.get_logger().info('Current Progress: %d%%' % feedback)\n",
+    "        \n",
+    "    \n",
+    "def main(args=None):\n",
+    "    # init rclpy\n",
+    "    rclpy.init(args=args)\n",
+    "    # create node\n",
+    "    progress_action_client = ProgressActionClient()\n",
+    "    # send goal\n",
+    "    progress_action_client.send_goal(10)\n",
+    "    # spin\n",
+    "    rclpy.spin(progress_action_client)\n",
+    "    \n",
+    "    \n",
+    "if __name__ == '__main__':\n",
+    "    main()\n",
+    "```\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Parameter Service\n",
+    "\n",
+    "**Scenario**\n",
+    "In a robotic system, different functional modules may need to use some shared data. For example:\n",
+    "\n",
+    "When implementing navigation, path planning is required, which mainly includes global path planning and local path planning. Global path planning involves designing an approximate route from the starting point to the target point, while local path planning generates a real-time path based on the vehicle’s current road conditions. Both types of path planning rely on the vehicle’s dimensions—such as length, width, and height.\n",
+    "\n",
+    "So, how should this common data be stored and accessed in the program?\n",
+    "\n",
+    "In this scenario, the parameter server can be used. Vehicle dimension data can be stored under one node, allowing other nodes to access and manipulate this data as needed.\n",
+    "\n",
+    "\n",
+    "**Concepts**\n",
+    "\n",
+    "The parameter server is a communication model that facilitates data interaction between nodes in a shared manner. The node that stores parameters is called the parameter server, while nodes that retrieve parameters are called parameter clients. The interaction between the parameter client and the parameter server is request-response-based, and the implementation of parameter communication is essentially an additional layer of encapsulation over service communication.\n",
+    "\n",
+    "**Purpose**\n",
+    "\n",
+    "Parameter communication is typically used in scenarios where shared data is required between nodes. The parameter server can store shared data, and the parameter client can access and manipulate this data as needed.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
